--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,66 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+@import url('https://fonts.googleapis.com/css2?family=Michroma&family=Orbitron:wght@400..900&family=Oxanium:wght@200..800&display=swap');
+@import "tailwindcss";
+
+.orbitron-200 {
+  font-family: 'Orbitron';
+  font-weight: 200;
+}
+
+.orbitron-400 {
+  font-family: 'Orbitron';
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.orbitron-700 {
+  font-family: 'Orbitron';
+  font-weight: 700;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.orbitron-900 {
+  font-family: 'Orbitron';
+  font-weight: 900;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.michroma-200 {
+  font-family: 'Michroma';
+  font-weight: 200;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.michroma-400 {
+  font-family: 'Michroma';
+  font-weight: 400;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.michroma-700 {
+  font-family: 'Michroma';
+  font-weight: 700;
+}
+
+.michroma-900 {
+  font-family: 'Michroma';
+  font-weight: 900;
+}
+
+.oxanium-200 {
+  font-family: 'Oxanium';
+  font-weight: 200;
+}
+
+.oxanium-400 {
+  font-family: 'Oxanium';
+  font-weight: 400;
+}
+
+.oxanium-700 {
+  font-family: 'Oxanium';
+  font-weight: 700;
+}
+
+.oxanium-900 {
+  font-family: 'Oxanium';
+  font-weight: 900;
+}
+
+placeholder-oxanium::placeholder {
+  font-family: 'Oxanium';
 }
